# numgen

./: README.md  pyproject.toml  setup.py
numgen/: __init__.py  gen.py
