[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numgen"
version = "1.0.0"
description = "A Python package for generating a number that I (probably) invented."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Egglord" }
]
license = { text = "MIT" }
